--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor-firebase/analytics": "^7.2.0",
     "@capacitor/android": "^7.4.0",
     "@capacitor/app": "^7.0.1",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/camera": "^7.0.1",
     "@capacitor/cli": "^7.4.0",
     "@capacitor/core": "^7.4.0",
@@ -37,16 +38,21 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "color-thief-react": "^2.1.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-parallax-tilt": "^1.7.299",
+    "react-responsive": "^10.0.1",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -61,6 +67,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
