--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -17,8 +17,9 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-push-notifications')
     implementation project(':capacitor-status-bar')
+    implementation project(':revenuecat-purchases-capacitor')
     implementation project(':squareetlabs-capacitor-navigation-bar')
-
+    implementation "com.android.billingclient:billing:7.1.1"
 }
 
 
