--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -26,5 +26,8 @@ project(':capacitor-push-notifications').projectDir = new File('../node_modules/
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
 
+include ':revenuecat-purchases-capacitor'
+project(':revenuecat-purchases-capacitor').projectDir = new File('../node_modules/@revenuecat/purchases-capacitor/android')
+
 include ':squareetlabs-capacitor-navigation-bar'
 project(':squareetlabs-capacitor-navigation-bar').projectDir = new File('../node_modules/@squareetlabs/capacitor-navigation-bar/android')
