--- a/package.json
+++ b/package.json
@@ -32,23 +32,30 @@
     "@heroicons/react": "^2.2.0",
     "@ionic/react": "^8.6.2",
     "@ionic/react-router": "^8.6.2",
+    "@revenuecat/purchases-capacitor": "^10.3.8",
     "@squareetlabs/capacitor-navigation-bar": "^1.1.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/react-transition-group": "^4.4.12",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "color-thief-react": "^2.1.0",
+    "cordova-plugin-purchase": "^13.12.1",
     "framer-motion": "^12.23.0",
     "gsap": "^3.13.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-parallax-tilt": "^1.7.299",
     "react-responsive": "^10.0.1",
+    "react-transition-group": "^4.4.5",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "swiper": "^11.2.10",
