--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic/react": "^8.6.2",
     "@ionic/react-router": "^8.6.2",
     "@revenuecat/purchases-capacitor": "^10.3.8",
+    "@revenuecat/purchases-js": "^1.11.0",
     "@squareetlabs/capacitor-navigation-bar": "^1.1.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tsparticles/all": "^3.8.1",
