Affiliate dasboard in external server

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react-transition-group": "^4.4.12",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "color-thief-react": "^2.1.0",
     "cordova-plugin-purchase": "^13.12.1",
